syntax = "proto3";

import "00-Protos/shared.proto";

option csharp_namespace = "Auth.Grpc";
package FriendRequests;

// Manages friend requests
service FriendRequestGrpc {
    rpc CreateFR (FRIndex) returns (FRResult);
    rpc DeleteFR (FRIndex) returns (FRResult);
    rpc ProcessFR (ProcessFRReq) returns (FRResult);
    rpc GetFR (FRIndex) returns (FRResult);
    rpc GetSentFRs (FRFilter) returns (PaginatedFRsResult);
    rpc GetReceivedFRs (FRFilter) returns (PaginatedFRsResult);
}

// Index for finding FR
message FRIndex {
    string sender_name = 1;
    string recipient_name = 2;
}

// Accept or decline FR
message ProcessFRReq {
    FRIndex index = 1;
    bool accept_request = 2;
}

// Filter FR
message FRFilter {
    Shared.PaginationPageInfo pagination_page = 1;
    bool is_ascending = 2;
    optional string sender_name = 3;
    string recipient_name = 4;
}

// Exception or FR
message FRResult {
    oneof result {
        Shared.ApiException exception = 1;
        FriendRequestData friend_request = 2;
    }
}

message FriendRequestData {
    string sender_id = 1;
    string recipient_id = 2;
    optional string is_accepted = 3;
}

// Paginated list of FRs
message PaginatedFRsResult {
    repeated FriendRequestData items = 1;
    Shared.PaginationResponse pagination = 2;
}
